# UltimateJudge

./: .gitignore  README.md
codeExecutor/: CMakeLists.txt  Dockerfile
codeExecutor/src/: Acceptor.cpp  Acceptor.h  AcceptorStatus.h  Connection.h  Handler.h  Reactor.cpp  Reactor.h  ReactorStatus.h  Status.h  main.cpp
doc/: architecture.drawio
framework/: pom.xml
framework/code-executor/: pom.xml
framework/code-executor/src/main/java/org/ultimatejudge/executor/: CodeExecutorApplication.java
framework/core/: pom.xml
framework/core/src/main/resources/: docker-java.properties
framework/core/src/test/java/org/ultimatejudge/: ServiceApplicationTests.java
framework/executor/: Dockerfile  pom.xml
framework/executor/src/main/resources/: application.yml
framework/src/main/java/org/onejudge/framework/: ServiceApplication.java
framework/src/main/java/org/ultimatejudge/framework/: ServiceApplication.java
framework/src/test/java/org/onejudge/framework/: ServiceApplicationTests.java
framework/src/test/java/org/ultimatejudge/framework/: ServiceApplicationTests.java
service/: .gitignore  pom.xml
service/src/main/java/org/onejudge/service/: ServiceApplication.java
service/src/test/java/org/onejudge/service/: ServiceApplicationTests.java
services/: .gitignore  pom.xml
services/src/main/java/org/onejudge/services/: ServiceApplication.java
services/src/test/java/org/onejudge/services/: ServiceApplicationTests.java
website/: .gitignore  package.json
website/app/: layout.tsx  page.tsx
website/pages/hello/: index.tsx
(+39 files in other folders)
